@@ -3,6 +3,7 @@ SVN from 0.67:
         - `dsss uninstall` now removes (empty) directories as well as files
           (see ticket #84).
         - Rebuild: Merged DMD 1.018.
+        - Rebuild: Added proper documentation for -Dq (see ticket #90).
 
 0.67 from 0.66:
         - Rebuild: Fixed generation of libraries with DMD+GNU/Linux (see ticket
